major & minor changes

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     <link rel="stylesheet" href="css/responsive.css">
 <body>
 
-
+    
 <!--Navigation area starts-->
 
-<header class="nav-area navbar-fixed-top">
+<div class="nav-area navbar-fixed-top">
     <div class="container">
         <div class="row">
             <!--main menu starts-->
@@ -50,7 +50,7 @@
             <div class="col-md-12">
                 <div class="main-menu">
                     <div class="navbar navbar-cus">
-                        <div class="navbar-header">
+                        <div class="navbar-div">
                             <a href="index.html" class="navbar-brand"><span class="logo">Krisz<span>tian</span></span></a>
                             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbarResponsive">
                                 <span class="sr-only">Toggle navigation</span>
@@ -77,7 +77,7 @@
             <!--main menu ends-->
         </div>
     </div>
-</header>
+</div>
 
 <!--Navigation area ends-->
 
@@ -166,10 +166,6 @@
                             </ul>
                         </div>
                     </div>
-
-
-                    <a href="#skills-bd" class="skill-btn btn-a">my skills</a>
-
                 </div>
             </div>
         </div>
@@ -568,7 +564,10 @@
             </div>
         </div>
     </div>
+
 </div>
+
+
 
 <!--Footer Area Ends-->
 
@@ -613,5 +612,5 @@
 <!--Main js-->
 <script src="js/main.js"></script>
 
-
-</body></html>
+</body>
+</html>
