major & minor changes

--- a/index.html
+++ b/index.html
@@ -2,12 +2,9 @@
     <!--meta tags-->
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description" content="Robin is a Personal Portfolio Template">
-    <meta name="keywords" content="mourithemes, onepage, developer, resume, cv, personal, portfolio, personal resume, clean, modern">
-    <meta name="author" content="MouriTheme">
+    <meta name="author" content="Krisztian">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!--Template name-->
+    
     <title>Krisztian - Personal Portfolio</title>
 
     <!--Favicon-->
