--- a/index.html
+++ b/index.html
@@ -580,6 +580,9 @@
 <!--Magnific popup js-->
 <script src="js/jquery.magnific-popup.js"></script>
 
+<!--Validator js-->
+<script src="js/jquery.waypoints.js"></script>
+
 <!--Counter up js-->
 <script src="js/jquery.counterup.min.js"></script>
 
