New profile pic

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="row">
             <div class="col-md-4 col-sm-12">
                 <div class="stack">
-                    <img src="images/about/prof.png" alt="about image"> 
+                    <img src="images/about/IMG_20200807_104042_1.jpg" alt="about image"> 
                 </div>
             </div>
             <div class="col-md-7 col-md-offset-1 col-sm-12">
